--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "2.*"
+        "zendframework/zendframework": ">2.*"
     },
     "require-dev": {
         "phpspec/phpspec": "2.0.*@dev"
